moved to NET core 2

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
         {
             "taskName": "build",
             "args": [
-                "${workspaceRoot}/itemize.csproj"
+                "${workspaceRoot}/src/itemize.csproj"
             ],
             "isBuildCommand": true,
             "problemMatcher": "$msCompile"
