--- a/src/itemize.csproj
+++ b/src/itemize.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <RuntimeIdentifiers>win7-x86;win10-x64;osx.10.12-x64</RuntimeIdentifiers>
   </PropertyGroup>
 
 </Project>
