--- a/src/itemize.csproj
+++ b/src/itemize.csproj
@@ -2,8 +2,9 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <RuntimeIdentifiers>win7-x86;win10-x64;osx.10.12-x64</RuntimeIdentifiers>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
 
 </Project>
