--- a/src/itemize.csproj
+++ b/src/itemize.csproj
@@ -2,9 +2,10 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RuntimeIdentifiers>win7-x86;win10-x64;osx.10.12-x64</RuntimeIdentifiers>
-    <LangVersion>8.0</LangVersion>
+    <TargetFramework>net6.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+    <RootNamespace>Itemized</RootNamespace>
   </PropertyGroup>
 
 </Project>
